<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_alc_activity_name">About ALC</string>
    <string name="my_profile_activity_name">My Profile</string>
    <string name="shams_keshk">Shams Keshk</string>
    <string name="email">Email:</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="track_value">Android</string>
    <string name="country_value">Egypt</string>
    <string name="email_value">shams.keshk@gmail.com</string>
    <string name="slack_user_name">shams.keshk</string>
    <string name="_201020103384">+201020103384</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
</resources>
